[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/item/ItemSuper.gd" type="Script" id=1]
[ext_resource path="res://assets/images/super_item.png" type="Texture2D" id=2]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[node name="ItemSuper" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 512
script = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="Sprite2" type="Sprite2D" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_ItemSuper_body_entered"]
